--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ pkg_check_modules(LIBS REQUIRED fox>=1.6)
 # Shared both main rule and unit tests editor sources
 # Do not contain main.cpp to avoid multiple definitions of main()
 set(EDITOR_SRC
+  src/editor/Elecrud.cpp
   src/editor/MainWindow.cpp
 )
 add_executable(elecrud src/editor/main.cpp ${EDITOR_SRC}) 
