Make the default Makefile rule depends on icons one

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,11 +34,14 @@ add_library(elecrud-file SHARED
   src/libfile/ProjectFile.cpp)
 target_link_libraries(elecrud-file PUBLIC ${Boost_LIBRARIES})
 
+# Executable
 add_executable(elecrud src/editor/main.cpp ${EDITOR_SRC}) 
-target_link_libraries(elecrud ${Boost_LIBRARIES} ${LIBS_LIBRARIES} elecrud-file)
+target_link_libraries(elecrud ${Boost_LIBRARIES} ${LIBS_LIBRARIES}
+  elecrud-file)
 target_include_directories(elecrud PUBLIC ${SDL2_INCLUDE_DIRS}
   ${LIBS_INCLUDE_DIRS}
   ${PROJECT_BINARY_DIR} src)
+add_dependencies(elecrud icons)
 
 # Unit tests
 find_package(Boost COMPONENTS unit_test_framework serialization REQUIRED)
