Add a GeneratorV1 class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ find_package(Boost COMPONENTS serialization REQUIRED)
 set(EDITOR_SRC
   src/editor/Elecrud.cpp
   src/editor/Generator.cpp
+  src/editor/GeneratorV1.cpp
   src/editor/MainWindow.cpp
 )
 
@@ -54,6 +55,7 @@ add_executable(tests src/tests.cpp
   src/libfile/ProjectFile_Test.cpp
   
   src/editor/Generator_Test.cpp
+  src/editor/GeneratorV1_Test.cpp
   src/editor/MainWindow_Test.cpp)
 target_link_libraries(tests ${Boost_LIBRARIES} ${LIBS_LIBRARIES} elecrud-file)
 target_include_directories(tests PUBLIC ${SDL2_INCLUDE_DIRS}
