--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -921,7 +921,9 @@ RECURSIVE              = YES
 # Note that relative paths are relative to the directory from which doxygen is
 # run.
 
-EXCLUDE                = @PROJECT_SOURCE_DIR@/src/app/node_modules
+# TestableGenerator.hpp shouldn't be documented 
+EXCLUDE                = @PROJECT_SOURCE_DIR@/src/app/node_modules \
+		         @PROJECT_SOURCE_DIR@/src/editor/TestableGenerator.hpp
 
 # The EXCLUDE_SYMLINKS tag can be used to select whether or not files or
 # directories that are symbolic links (a Unix file system feature) are excluded
