Add a eudcat main unit test to check for return value

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,7 @@ add_executable(tests src/tests.cpp
   src/editor/GeneratorV1_Test.cpp
   src/editor/MainWindow_Test.cpp
 
+  src/eudcat/main_Test.cpp
   src/eudcat/StartupOptions_Test.cpp
 )
 target_link_libraries(tests ${Boost_LIBRARIES} ${LIBS_LIBRARIES}
