--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ set(EDITOR_SRC
   src/editor/Generator.cpp
   src/editor/GeneratorV1.cpp
   src/editor/MainWindow.cpp
+  src/editor/NewCollectionDialog.cpp
   src/editor/ProcessWatcher.cpp
 )
 
