--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ cmake_minimum_required(VERSION 3.5)
 project(elecrud VERSION 0.0.2)
 set(REVISION 24)
 
+set(CMAKE_BUILD_TYPE "Debug")
+set(CMAKE_CXX_FLAGS_DEBUG_INIT "-Wall")
+
 configure_file(
   "${PROJECT_SOURCE_DIR}/Doxyfile.in"
   "${PROJECT_BINARY_DIR}/Doxyfile"
