--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ add_library(elecrud-file SHARED
   src/libfile/Collection.cpp
   src/libfile/CollectionList.cpp
   src/libfile/Field.cpp
+    src/libfile/ftInt.cpp
   src/libfile/ProjectFile.cpp
 )
 target_link_libraries(elecrud-file PUBLIC ${Boost_LIBRARIES} ${LIBS_LIBRARIES})
@@ -71,6 +72,7 @@ add_executable(tests src/tests.cpp
   src/libfile/CollectionList_Test.cpp
 
   src/libfile/Field_Test.cpp
+  src/libfile/ftInt_Test.cpp
   
   src/editor/Generator_Test.cpp
   src/editor/GeneratorV1_Test.cpp
