New field button deactivated by default and basic dialog

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ set(EDITOR_SRC
   src/editor/Generator.cpp
   src/editor/GeneratorV1.cpp
   src/editor/MainWindow.cpp
+  src/editor/NewFieldDialog.cpp
   src/editor/NewCollectionDialog.cpp
   src/editor/ProcessWatcher.cpp
 )
